[tool.poetry]
name = "lena"
version = "0.1.0"
description = ""
authors = ["Mohammadhossein Amouei <mohammadhossein.amouei@mail.mcgill.ca>"]
readme = "README.md"
include = ["config.toml"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
torch = {version = "^2.9.0", source = "pytorch"}
torchvision = {version = "^0.24.0", source = "pytorch"}
transformers = "^4.57.1"
tokenizers = "^0.22.1"
datasets = "^4.2.0"
accelerate = "^1.11.0"
evaluate = "^0.4.6"
safetensors = "^0.6.2"
huggingface-hub = "^0.35.3"
tqdm = "^4.67.1"
numpy = "^2.3.4"
pyyaml = "^6.0.3"
pyelftools = "^0.32"
pyghidra = "^2.2.0"
matplotlib = "^3.10.7"
sentencepiece = "^0.2.1"
protobuf = "^6.33.0"
peft = "^0.18.0"
bitsandbytes = "^0.49.0"
zstandard = "^0.25.0"
filelock = "^3.20.0"
wandb = "^0.22.3"
torchrun = "^0.2.9"
simple-parsing = "^0.1.7"
xformers = "^0.0.33.post1"
tensorboard = "^2.20.0"
tensorboard-plugin-profile = "^2.21.1"
lion-pytorch = "^0.2.3"
mistral-inference = "^1.6.0"
torchview = "^0.2.7"
graphviz = "^0.21"
packaging = "^25.0"
ninja = "^1.13.0"
trl = "^0.24.0"
scikit-learn = "^1.8.0"
unsloth = "^2026.1.2"
weave = "^0.52.23"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
